--- a/src/component/SearchBox/Search_Box.css
+++ b/src/component/SearchBox/Search_Box.css
@@ -1,16 +1,16 @@
 .search-wrapper{
-    height: calc(80vh - 110px);
-    width: calc(30vh - 5px);;
+    height: 65vh;
+    width: 15vw;
     margin-top: 110px;
     background-color: #ffffff;
     stroke: #879B6D;
     border: 1px solid #879B6D;
     position: absolute;
     left: 10%;
-    top: 7%;
+    top: 15%;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    transform: translate(28%, -5vh);
+    transform: translate(28%, -4vh);
 }
 
 #Search_box_title{
@@ -18,6 +18,11 @@
     display: flex;
     flex-direction: column;
     align-content: center;
+
+}
+
+#Search_title{
+    font-size: 50px;
 }
 
 #Search_box_title p{
@@ -196,8 +201,8 @@
 }
 
 #isTraffic {
-    text-align: right;
-    transform: translate(-1%, -120%);
-    color: darkred;
-    font-size: small;
+    text-align: center;
+    transform: translate(-1%, 0%);
+    color: #da3c0d;
+    font-size: 12px;
 }
