--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -20,8 +20,19 @@
     width: 300px;
     padding: 15px 80px 30px 80px;
 }
+.mobileLoginBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid #75ACFF;
+    border-radius: 10px;
+    width: 90vw;
+    margin-top: 100px;
+    padding: 15px 40px 30px 40px;
+    box-sizing: border-box;
+}
 
-.loginBox > h3{
+.loginBox > h3, .mobileLoginBox > h3{
     font-weight: 800;
     font-size: 20px;
     text-align: center;
